Fixed d alignment of speaker cards.

--- a/source/components/home/speakers/styles.scss
+++ b/source/components/home/speakers/styles.scss
@@ -41,6 +41,14 @@
         padding: 0.2em;
         color: #ffff;
     }
+    h4 {
+        text-align: center;
+        font-size: 15px;
+        font-weight: light;
+        font-family: "Roboto Slab", serif;
+        padding: 0.4em;
+        color: #ffff;
+    }
     .thumbnail {
         padding: 0;
     }
